# passwords-manager

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: tests.yml
include/: BigInt.h  db_manager.h  rsa.h
src/: BigInt.cpp  db_manager.cpp  rsa.cpp
tests/: test_BigInt.cpp  test_rsa.cpp
